== 3030-12-31 Getting Started
<p>If you're new to Constellation, read the <a href="" helpId="au.gov.asd.tac.constellation.functionality.gettingstarted">getting started guide</a>.</p>

== 2022-02-22 Find View (Experimental)
<p>A new version of the Find View can be accessed via Experimental -> Views or Ctrl + B. This version is intended to replace the current Find View at some stage.</p>

== 2022-02-21 Compare Graph Parameters
<p>The dialog for comparing graphs in the Tools -> Compare graph menu will now update to prevent the user from comparing against the original graph.</p>

== 2022-02-17 Add description to Step Tab names in Data Access View
<p> The Step Tab names in the Data Access View can now be double clicked to add a brief decription. E.g. If "Initial run" is entered, "Step 1 - Initial run" will be displayed in the Tab name. This is also saved and loaded as part of the templates.</p>

== 2022-01-24 Histogram Bins Selected Count
<p>The Histogram now shows the amount of bins selected out of the total bins present.</p>

== 2022-01-21 File Importer
<p>File Importer enforces all files that are being added have the same column structure.
When the 'Files Include Headers' option is enabled, the column headings of all the files should be the same. When it is disabled,
the number of columns should be the same. Otherwise a warning message is displayed and the files with a different structure to the
first file added are removed.</p>

== 2021-12-16 Quality Control Categories
<p>The dialog to change the Quality Control category levels will now show when the level is different from the default.</p>

== 2021-11-23 Context Menu
<p>The right-click context menu in the graph window has been updated to include Selection and Reset View options.</p>

== 2021-11-02 Data Access View Templates